# Automated-analysis-of-potentiometric-titrations

./: .gitignore  README.md  potentiometrie.py  pyproject.toml  requirements.txt
potentio_gui/: __init__.py  __main__.py
potentio_gui/lib/: potentiometrie.py
potentio_gui/ui/: Homepage.py  MainWindow.py  Menubar.py  Potentiometrie.py
potentio_gui/ui/PotentiometrieWidgets/: DataInput.py  MenuBar.py  PlotCanvas.py
potentio_gui/ui/dialog/: AboutDialog.py  ExcelImport.py
