[project]
name = "potentio_gui"
version = "0.1.0"
description = ""
authors = ["MaFeLP <mafelp@proton.me>"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lmfit>=1.3.4",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pandas-stubs==2.3.2.250926",
    "pyqt6>=6.10.0",
    "pyxdg>=0.28",
    "scipy>=1.16.3",
    "scipy-stubs==1.16.3.0",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "pyinstaller>=6.16.0",
]
